<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/crear_cuenta" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_txtemail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_txtpass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/txtConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/signup_textConfPassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/signup_btnRegistrar"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:textColor="#FFFFFF"
                android:text="@string/regresar"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>