<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/login_btnlogin"
                android:scaleType="centerInside"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/lectorqr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_txtemail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edtTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_txtpass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/login_btnlogin"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/login_btnfpass"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/login_btnsignup"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>