<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20px"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/seguridad" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailtoReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/resetPassword_txtCorreo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="28sp"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/resetPassword_btnReset"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:textColor="@color/white"
                android:text="@string/regresar"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>